Fix overflow

--- a/public/main.css
+++ b/public/main.css
@@ -4,6 +4,15 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.scroll {
+    overflow: scroll;
+    max-height: 100vh;
+}
+
+.hideXOverflow {
+    overflow-x: hidden;
+}
+
 .shadow {
     -webkit-box-shadow: 0px 0px 22px 12px rgba(0,0,0,0.50);
     -moz-box-shadow: 0px 0px 22px 12px rgba(0,0,0,0.50);
